# 1669_computer_graphics

./: .gitignore  CMakeLists.txt
01-PrimerVentana/: 01-PrimerVentana.vcxproj  CMakeLists.txt  main.cpp
02-Primitivas/: 02-Primitivas.vcxproj  CMakeLists.txt  main.cpp
03-Redimensionar/: 03-Redimensionar.vcxproj  CMakeLists.txt  main.cpp
04-Teclado/: 04-Teclado.vcxproj  CMakeLists.txt  main.cpp
05-Mouse/: 05-Mouse.vcxproj  CMakeLists.txt  main.cpp
06-Color/: 06-Color.vcxproj  CMakeLists.txt  main.cpp
07-Rotacion/: 07-Rotacion.vcxproj  CMakeLists.txt  main.cpp
08-Transformaciones/: CMakeLists.txt  main.cpp
Tarea-02/: CMakeLists.txt  main.cpp
Tarea-03/: CMakeLists.txt  Makefile  Tarea-02.cbp  cmake_install.cmake  main.cpp
